--- a/stylesheets/colors.less
+++ b/stylesheets/colors.less
@@ -1,15 +1,15 @@
 // These colors are specific to the theme. Do not use in a package!
 
-@very-light-gray: #d4d6d7;
-@light-gray: #526069;
-@gray: #333f46;
-@dark-gray: #263238;
-@very-dark-gray: #263238;
+@very-light-gray: #c5c8c6;
+@light-gray: #969896;
+@gray: #373b41;
+@dark-gray: #282a2e;
+@very-dark-gray: #1d1f21;
 
-@cyan: #80cbc4;
-@blue: #6699CC;
-@purple: #BB80B3;
-@green: #c3e88d;
-@red: #EC5F67;
-@orange: #E8A01E;
-@light-orange: #ffeb95;
+@cyan: #8abeb7;
+@blue: #81a2be;
+@purple: #b294bb;
+@green: #b5bd68;
+@red: #cc6666;
+@orange: #de935f;
+@light-orange: #f0c674;
