--- a/stylesheets/syntax-variables.less
+++ b/stylesheets/syntax-variables.less
@@ -7,10 +7,10 @@
 @syntax-text-color: @very-light-gray;
 @syntax-cursor-color: white;
 @syntax-selection-color: lighten(@dark-gray, 10%);
-@syntax-background-color: @dark-gray;
+@syntax-background-color: @very-dark-gray;
 
 // Guide colors
-@syntax-wrap-guide-color: @gray;
+@syntax-wrap-guide-color: @dark-gray;
 @syntax-indent-guide-color: @gray;
 @syntax-invisible-character-color: @gray;
 
@@ -19,7 +19,7 @@
 @syntax-result-marker-color-selected: white;
 
 // Gutter colors
-@syntax-gutter-text-color: @light-gray;
+@syntax-gutter-text-color: @very-light-gray;
 @syntax-gutter-text-color-selected: @syntax-gutter-text-color;
 @syntax-gutter-background-color: @dark-gray;
 @syntax-gutter-background-color-selected: @gray;
