--- a/stylesheets/colors.less
+++ b/stylesheets/colors.less
@@ -13,3 +13,19 @@
 @red: #cc6666;
 @orange: #de935f;
 @light-orange: #f0c674;
+
+@outer-space: #263238;
+@dew: #eeffff;
+@supernova: #ffcc00;
+@limed-spruce: #37474F;
+@monte-carlo: #80cbc4;
+@cutty-sark: #546E7A;
+@biloba-flower: #C792EA;
+@golden-tainoi: #FFCB6B;
+@jungle-mist: #b2ccd6;
+@anakiwa: #89DDFF;
+@malibu: #82AAFF;
+@yellow-green: #C3E88D;
+@froly: #f07178;
+@tan-hide: #F78C6C;
+@wild-watermelon: #ff5370;
