--- a/stylesheets/syntax-variables.less
+++ b/stylesheets/syntax-variables.less
@@ -4,10 +4,10 @@
 // include a syntax-variables.less file.
 
 // General colors
-@syntax-text-color: @very-light-gray;
+@syntax-text-color: @dew;
 @syntax-cursor-color: white;
-@syntax-selection-color: lighten(@dark-gray, 10%);
-@syntax-background-color: @very-dark-gray;
+@syntax-selection-color: fade(@monte-carlo, 12.5%);
+@syntax-background-color: @outer-space;
 
 // Guide colors
 @syntax-wrap-guide-color: @dark-gray;
@@ -19,10 +19,10 @@
 @syntax-result-marker-color-selected: white;
 
 // Gutter colors
-@syntax-gutter-text-color: @very-light-gray;
-@syntax-gutter-text-color-selected: @syntax-gutter-text-color;
-@syntax-gutter-background-color: @dark-gray;
-@syntax-gutter-background-color-selected: @gray;
+@syntax-gutter-text-color: @limed-spruce;
+@syntax-gutter-text-color-selected: @limed-spruce;
+@syntax-gutter-background-color: @outer-space;
+@syntax-gutter-background-color-selected: fade(black, 31%);
 
 // For git diff info. i.e. in the gutter
 @syntax-color-renamed: @blue;
